--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -7,12 +7,23 @@ body {
   overflow: auto;
 }
 
+@media (prefers-color-scheme: dark) {
+  html,
+  body {
+    color: white;
+  }
+}
+
 body * {
   font-family: inherit !important;
 }
 
 * {
   box-sizing: border-box;
+
+  @media (prefers-color-scheme: dark) {
+    color: rgba(255, 255, 255, 0.9);
+  }
 }
 
 a {
@@ -28,7 +39,7 @@ h6 {
   margin: 0;
 }
 
-.SVGIcon {
+.SVGIcon:not([class*='fill-']) {
   path:not([fill]) {
     stroke: currentColor;
   }
